Fix white space in code blocks

--- a/assets/scss/_syntax-highlighting.scss
+++ b/assets/scss/_syntax-highlighting.scss
@@ -28,7 +28,7 @@
       padding: 0 !important;
 
       * {
-        white-space: nowrap; // this sets all children inside to nowrap
+        white-space: pre; // this sets all children inside to nowrap
       }
     }
   }
